@@ -1,3 +1,8 @@
+2004-12-08  Bruno Haible  <bruno@clisp.org>
+
+	* pathname.d (use_default_dir): Fix GC-safety bug introduced on
+	2002-01-09.
+
 2004-12-10  Arseny Slobodyuk  <ampy@ich.dvo.ru>
 
 	* win32.d: fixed mingw build - include sys/types.h before using of
